--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 .DS_Store
 node_modules
-/dist
+.gitignore
+.babel.config.js
+.tsconfig.json
+updateComponents.*
+_defaultComp
+dist
+_old
 
 # local env files
 .env.local
@@ -10,7 +16,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
