--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
+    "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
     "register-service-worker": "^1.7.1",
-    "tccomponents_vue": "^0.3.1",
-    "core-js": "^3.6.4"
+    "tccomponents_vue": "^0.3.4",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.26.0",
