--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "register-service-worker": "^1.7.1",
     "tccomponents_vue": "^0.4.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.26.0",
